--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=telmah1
-spring.datasource.url=jdbc:mysql://localhost:3306/mentor-match-db
+spring.datasource.username=mentormatch_user
+spring.datasource.password=U3KWR4D_'.E.e'Y
+spring.datasource.url=jdbc:mysql://db4free.net/mentormatch_db
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
